[tool.poetry]
name = "qc4u2-chicken-game"
version = "1.0.0"
description = "Quantum Computing for Beginners: Chicken Game"
authors = ["d-prime <tanemaki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
ipython = "^8.24.0"
invoke = "^2.2.0"
pennylane = "^0.36.0"
matplotlib = "^3.8.4"
streamlit = "^1.34.0"
watchdog = "^4.0.0"
qutip = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
